--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,5 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - run:
-        chakra snippet add --outdir src/components/chakra --all && chakra typegen src/theme.ts
+        npm chakra snippet add --outdir src/components/chakra --all
+        npm chakra typegen src/theme.ts
