--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - run:
-        npm chakra snippet add --outdir src/components/chakra --all
+        npx chakra snippet add --outdir src/components/chakra --all
     - run:
-        npm chakra typegen src/theme.ts
+        npx chakra typegen src/theme.ts
