--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "test": "echo \"No test specified.\" && exit 0",
+    "test1": "chakra snippet add --outdir src/components/chakra --all",
+    "test2": "chakra typegen src/theme.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
