--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,3 +37,5 @@ jobs:
         npm run test1
     # - run:
     #     npm run test2
+    - run:
+        find ./src/components/chakra -type f -ls | md5sum > ./src/components/chakra/md5sum.txt
