--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,7 @@ jobs:
     # - run:
     #     npx chakra typegen src/theme.ts
     - run:
+        rm -rf ./src/components/chakra/*.tsx
         npm run test1
     # - run:
     #     npm run test2
