--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,4 +34,5 @@ jobs:
     - run:
         rm -rf ./src/components/chakra/*.tsx
         npm run test1
-    - run: make
+    - run: make chakra_checksum
+      working-directory: CI
