--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,9 +24,13 @@ jobs:
       with:
         node-version: "22.x"
         cache: "npm"
+
     - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+
+    # - run: npm run build --if-present
+
+    # - run: npm test
+
     # - run:
     #     npx chakra snippet add --outdir src/components/chakra --all
     # - run:
