--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,11 +39,19 @@ jobs:
         rm -rf ./src/components/chakra/*.tsx
         npm run test1
     - run:
+        echo "=== 確認1 ==="
+        file chakra_checksum.txt
+
+        echo "=== 実行 ==="
         cargo run > chakra_checksum-ci.txt
 
+        echo "=== 確認2 ==="
         cat chakra_checksum.txt
+
+        echo "=== 確認3 ==="
         cat chakra_checksum-ci.txt
 
+        echo "=== 確認4 ==="
         diff -s -u chakra_checksum-ci.txt chakra_checksum.txt
 
       working-directory: CI
