--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,9 @@ jobs:
         rm -rf ./src/components/chakra/*.tsx
         npm run test1
     - run: |
+        cargo run
+      working-directory: CI
+    - run: |
         cargo run > chakra_checksum-ci.txt
         diff -s -u chakra_checksum-ci.txt chakra_checksum.txt
-
       working-directory: CI
