--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,8 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    - cron: "0 3,9,15,21 * * *" # every day at 3am and 3pm UTC
+      # every day at 3, 9, 15, and 21 UTC (JST: 12:00, 18:00, 24:00, 6:00)
+    - cron: "0 3,9,15,21 * * *" 
 
 jobs:
   build:
