--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,8 +8,8 @@ on:
   push:
     branches: ["main"]
   schedule:
-    # every day at 3, 9, 15, and 21 UTC (JST: 12:00, 18:00, 24:00, 6:00)
-    - cron: "0 3,21 * * *"
+    # 毎日 21:00(UTC) に実行
+    - cron: "0 21 * * *"
 
 jobs:
   build:
